creste product and product details

--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -30,7 +30,7 @@
             </a>
           </div>
       </mat-sidenav>
-      <mat-sidenav-content>
-        <mat-card>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur ut reiciendis pariatur vel non hic asperiores? Aperiam cumque, dolores facilis tempora quam error aliquid perspiciatis possimus at beatae et atque?</mat-card>
-      </mat-sidenav-content>
+      <!-- <mat-sidenav-content> -->
+        <h3 class="header">Look Book</h3>
+      <!-- </mat-sidenav-content> -->
     </mat-sidenav-container>
