--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,8 +1,8 @@
-<app-sidebar></app-sidebar>
 <div fxLayout="row wrap" 
   fxLayout.lt-sm="column" 
   fxLayoutGap="3px" 
-  fxLayoutAlign="flex-start">
+  fxLayoutAlign="flex-start"
+  class="prdouct-pg">
 <ng-container *ngFor="let product of products">
   <mat-card 
     fxFlex="0 1 calc(33.3% - 32px)"
