--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -5,7 +5,6 @@
 
 .card {
   flex: 1 0 21%;
-  /* margin: 5px; */
   height: 100px;
   background-color: blue;
 }
@@ -18,6 +17,10 @@ mat-card {
 }
 
 mat-card img{
-  object-fit: cover;
   height: 115%;
+}
+
+.prdouct-pg {
+  margin-right:7em;
+  margin-left: 2em;
 }
