--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,14 +3,15 @@
     <div class="logo">
       <img src="../../assets/blue-needles.svg" alt="logo">
     </div>
-      <div class="icons">
-        <svg style="width:32px;height:32px" viewBox="0 0 24 24">
-          <path fill="#3C5A99" d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1
-            19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0
-            12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
-          </svg>
-          <a href="https://twitter.com/NeedlesBlue" target="_blank">
-          <svg style="width:32px;height:32px; padding: 10px;" viewBox="0 0 24 24">
+    <div class="icons">
+      <svg style="width:32px;height:32px" viewBox="0 0 24 24">
+        <path fill="#3C5A99" d="M5,3H19A2,2 0 0,1 21,5V19A2,2 0 0,1
+          19,21H5A2,2 0 0,1 3,19V5A2,2 0 0,1 5,3M18,5H15.5A3.5,3.5 0 0,0
+          12,8.5V11H10V14H12V21H15V14H18V11H15V9A1,1 0 0,1 16,8H18V5Z" />
+        </svg>
+        <a href="https://twitter.com/NeedlesBlue" target="_blank">
+          <svg style="width:32px;height:32px; padding: 10px;" viewBox="0 0 24
+            24">
             <path fill="#1DA1F2" d="M22.46,6C21.69,6.35 20.86,6.58
               20,6.69C20.88,6.16 21.56,5.32 21.88,4.31C21.05,4.81 20.13,5.16
               19.16,5.36C18.37,4.5 17.26,4 16,4C13.65,4 11.73,5.92
@@ -25,12 +26,14 @@
               22.46,6Z" />
             </svg>
           </a>
-            <a href="https://www.instagram.com/bluneedles" target="_blank">
-            <img src="https://img.icons8.com/color/32/000000/instagram-new.png" matTooltip="instagram" (click)="igLink()">
-            </a>
-          </div>
+          <a href="https://www.instagram.com/bluneedles" target="_blank">
+            <img src="https://img.icons8.com/color/32/000000/instagram-new.png"
+              matTooltip="instagram" (click)="igLink()">
+          </a>
+        </div>
       </mat-sidenav>
-      <!-- <mat-sidenav-content> -->
+      <mat-sidenav-content>
         <h3 class="header">Look Book</h3>
-      <!-- </mat-sidenav-content> -->
+        <router-outlet></router-outlet>
+      </mat-sidenav-content>
     </mat-sidenav-container>
