--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -28,7 +28,7 @@
           </a>
           <a href="https://www.instagram.com/bluneedles" target="_blank">
             <img src="https://img.icons8.com/color/32/000000/instagram-new.png"
-              matTooltip="instagram" (click)="igLink()">
+              matTooltip="instagram">
           </a>
         </div>
       </mat-sidenav>
